--- a/ar-resume.html
+++ b/ar-resume.html
@@ -524,8 +524,8 @@
 
       <p align="justify" class="hidden-mobile" style="text-align: right; direction: rtl;">
 
-        يعمل الدكتور هونغ شو حاليًا كمهندس بحث وتطوير متخصص في أنظمة الطاقة المتجددة في ألمانيا، مكرسًا لتحقيق الحياد
-        الكربوني في قطاعات الطاقة والنقل.
+        ملتزماً بفلسفة "<strong>الريادة–الابتكار–الفعالية</strong>"، يكرس الدكتور هونغ شو نفسه لتعزيز <strong>الكفاءة</strong> وتعميق <strong>الاتصال الذكي</strong> في مجالات <strong>الطاقة والنقل</strong>، بهدف دفع التحول الصناعي الأخضر وتحقيق رؤية <strong>الحياد الكربوني</strong>.
+
 
       </p>
 
