--- a/cn-activities.html
+++ b/cn-activities.html
@@ -959,6 +959,7 @@
         <h3>参观访问</h3>
         <ul class="square">
           <li><strong>国际组织: </strong><br>
+            2025 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>联合国大学总部 </strong> (东京涩谷, 日本)<br>
             2024 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>联合国欧洲总部 </strong> (日内瓦, 瑞士)<br>
             2024 | <img class="flag-icon" src="./images/wflags/de.png" alt="UN"> <strong>国际可再生能源总署</strong> (波恩, 德国)<br>
             2023 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>联合国维也纳分部 </strong> (维也纳,
