--- a/cn-resume.html
+++ b/cn-resume.html
@@ -560,7 +560,7 @@
       <div>
 
         <p class="hidden-mobile" align="justify">
-          目前，徐泓博士在德国工业界担任<strong>新能源动力系统</strong>专家工程师，致力于实现<strong>能源与交通</strong>领域<strong>碳中和</strong>。</br>
+          秉承“<strong>创先-创新–创效</strong>”的理念，徐泓博士致力于<strong>能源与交通</strong>领域的<strong>效能提升</strong>与<strong>智能互联</strong>，以期推动产业绿色转型达成“<strong>碳中和</strong>“之愿景。</br>
         </p>
       </div>
 
@@ -595,9 +595,9 @@
           <li>2023-2023 | <strong>高级管理教育, 绿色转型</strong>
             <div style="float: right"></div><br>
             <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">英国 · 剑桥大学商学院</a></strong> (桑坦德银行奖学金)<br>
-          <li>2019-2021 | <strong>MBA, 工商管理/可持续发展</strong>
+          <!-- <li>2019-2021 | <strong>MBA, 工商管理/可持续发展</strong>
             <div style="float: right"></div><br>
-            <strong><a href="https://quantic.edu/mba" target="_blank">美国 · 昆藤商学院</a></strong> (全奖/Fellow)<br>
+            <strong><a href="https://quantic.edu/mba" target="_blank">美国 · 昆藤商学院</a></strong> (全奖/Fellow)<br> -->
           <li>2018-2019 | <strong>交换生, 银行金融系</strong>
             <div style="float: right"></div><br>
             <strong><a href="https://uzh.ch" target="_blank">瑞士 · 苏黎世大学</a></strong> (Swiss Mobility)<br>
@@ -640,10 +640,10 @@
                   <div style="float: right"></div><br>
                   <strong><a href="https://www.jbs.cam.ac.uk/" target="_blank">英国 · 剑桥大学商学院</a></strong> (桑坦德银行奖学金)<br>
                 </li>
-                <li>2019-2021 | <strong>MBA, 工商管理/可持续发展</strong>
+                <!-- <li>2019-2021 | <strong>MBA, 工商管理/可持续发展</strong>
                   <div style="float: right"></div><br>
                   <strong><a href="https://quantic.edu/mba" target="_blank">美国 · 昆藤商学院</a></strong> (全奖/Fellow)<br>
-                </li>
+                </li> -->
                 <li>2018-2019 | <strong>交换生, 银行金融系</strong>
                   <div style="float: right"></div><br>
                   <strong><a href="https://uzh.ch" target="_blank">瑞士 · 苏黎世大学</a></strong> (Swiss Mobility)
@@ -655,122 +655,6 @@
         </div>
       </div>
 
-      <hr class="display-mobile" style="width:113%">
-      <hr class="hidden-mobile">
-
-      <div class="doc-section display-mobile" id="academic-experience-mobile">
-
-        <h3 style="display:inline-block">研究经历</h3>
-
-        <ul class="square">
-
-          <li>2016-2021 | <strong>博士研究员, 氢能 & 燃料电池 </strong>
-            <div style="float: right"></div><br>
-            <strong><a href="https://psi.ch/en" target="_blank">瑞士 · 保罗谢尔研究院</a></strong> (ETH联合体)
-          <li>2015-2016 | <strong>研究助理, 半导体 & 传感器</strong>
-            <div style="float: right"></div><br>
-            <strong><a href="http://tum.de" target="_blank">德国 · 慕尼黑工业大学</a></strong> (物理系)<br>
-            <!-- <li>2015-2015 | <strong>实习生, 水环境与污染建模</strong>
-            <div style="float: right"></div><br>
-            <strong><a href="http://enpc.fr" target="_blank">法国 · 巴黎理工学院</a></strong> (巴黎高科路桥学院)<br> -->
-          <li>2015-2015 | <strong>实习生, 材料成像与动力学</strong>
-            <div style="float: right"></div><br>
-            <strong><a href="http://xfel.eu" target="_blank">欧盟 · X射线自由电子激光器</a></strong> (德国汉堡)<br>
-            <p>____</p>
-          <li>2023-2023 | <strong>访问学者, 能源经济与政策</strong>
-            <div style="float: right"></div><br>
-            <strong><a href="https://oxfordenergy.org" target="_blank">英国 · 牛津能源研究所</a></strong> (智库/Fellow)<br>
-          </li>
-          <!-- <li>2022-2022 | <strong>海外/Fellow, 新能源/Start-up</strong>
-            <div style="float: right"></div><br>
-            <strong><a href="https://uzh.ch" target="_blank">中国 · 奇绩创坛</a></strong> (北京/投研部)
-          </li> -->
-          <li>2019-2020 | <strong>行研实习生, 材料/能源/TMT</strong>
-            <div style="float: right"></div><br>
-            <strong><a href="https://quantic.edu/mba" target="_blank">中国 · 中信证券</a></strong> (北京/研究部)<br>
-          </li>
-        </ul>
-      </div>
-
-      <div class="doc-section hidden-mobile" id="academic-experience">
-        <h3 style="display:inline-block">研究经历</h3>
-        <div class="education-columns">
-
-          <div class="column-edu">
-            <div class="doc-section" id="education-2col">
-
-              <ul class="square">
-                <li>2016-2021 | <strong>博士研究员, 氢能 & 燃料电池 </strong>
-                  <div style="float: right"></div><br>
-                  <strong><a href="https://psi.ch/en" target="_blank">瑞士 · 保罗谢尔研究院</a></strong> (ETH联合体)
-                <li>2015-2016 | <strong>研究助理, 半导体 & 传感器</strong>
-                  <div style="float: right"></div><br>
-                  <strong><a href="http://tum.de" target="_blank">德国 · 慕尼黑工业大学</a></strong> (物理系)<br>
-                  <!-- <li>2015-2015 | <strong>实习生, 水环境与污染建模</strong>
-                  <div style="float: right"></div><br>
-                  <strong><a href="http://enpc.fr" target="_blank">法国 · 巴黎理工学院</a></strong> (巴黎高科路桥学院)<br> -->
-                <li>2015-2015 | <strong>实习生, 材料成像与动力学</strong>
-                  <div style="float: right"></div><br>
-                  <strong><a href="http://xfel.eu" target="_blank">欧盟 · X射线自由电子激光器</a></strong> (德国汉堡)<br>
-              </ul>
-            </div>
-          </div>
-
-          <div class="column-edu">
-            <div class="doc-section" id="education">
-              <ul class="square">
-                <li>2023-2023 | <strong>访问学者, 能源经济与政策</strong>
-                  <div style="float: right"></div><br>
-                  <strong><a href="https://oxfordenergy.org" target="_blank">英国 · 牛津能源研究所</a></strong> (智库/Fellow)<br>
-                </li>
-                <!-- <li>2022-2022 | <strong>海外Fellow, 新能源/Start-up</strong>
-                  <div style="float: right"></div><br>
-                  <strong><a href="https://uzh.ch" target="_blank">中国 · 奇绩创坛</a></strong> (北京/投研部)
-                </li> -->
-                <li>2019-2020 | <strong>行研实习生, 材料/能源/TMT</strong>
-                  <div style="float: right"></div><br>
-                  <strong><a href="https://quantic.edu/mba" target="_blank">中国 · 中信证券</a></strong> (北京/研究部)<br>
-                </li>
-
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
-      <!-- 
-      <hr class="display-mobile" style="width:113%">
-      <hr class="hidden-mobile">
-
-      <div class="doc-section" id="academic-experience">
-
-        <h3 style="display:inline-block">研究经历</h3>
-
-        <ul class="square">
-
-          <li>2023-2023 | <strong>访问学者, 能源经济与政策</strong>
-            <div style="float: right"></div><br>
-            <strong><a href="https://oxfordenergy.org" target="_blank">英国 · 牛津能源研究所</a></strong> (智库/Fellow)<br>
-          </li>
-
-          <li>2016-2021 | <strong>博士研究员, 氢能 & 燃料电池 </strong>
-            <div style="float: right"></div><br>
-            <strong><a href="https://psi.ch/en" target="_blank">瑞士 · 保罗谢尔研究院</a></strong> (ETH联合体)
-          <li>2015-2016 | <strong>研究助理, 半导体 & 传感器</strong>
-            <div style="float: right"></div><br>
-            <strong><a href="http://tum.de" target="_blank">德国 · 慕尼黑工业大学</a></strong> (物理系)<br>
-          <li>2015-2015 | <strong>实习生, 水环境与污染建模</strong>
-            <div style="float: right"></div><br>
-            <strong><a href="http://enpc.fr" target="_blank">法国 · 巴黎理工学院</a></strong> (巴黎高科路桥学院)<br>
-          <li>2015-2015 | <strong>实习生, 材料成像与动力学</strong>
-            <div style="float: right"></div><br>
-            <strong><a href="http://xfel.eu" target="_blank">欧盟 · X射线自由电子激光器</a></strong> (德国汉堡)<br>
-
-        </ul>
-      </div>
-
- -->
 
 
       <hr class="display-mobile" style="width:113%">
@@ -779,14 +663,7 @@
       <div class="doc-section" id="academic-services">
         <h3>学术职能</h3>
         <ul class="square">
-          <li><strong>国际组织/智库: </strong><br>
-            <!-- - <strong>萨尔茨堡全球研讨会: KFAS-Salzburg</strong>, Fellow/研究员 (KFAS-SGS, 2024-2025)<br> -->
-            - <strong>联合国波恩气候变化大会: 分会主持人</strong>, 青年代表/演讲人 (UNFCCC, 2023-2024)<br>
-            - <strong>联合国欧洲经济委员会: 气候变化与陆上交通</strong> 专家组成员/内部咨询 (UNECE, 2023-2024)<br>
-            - <strong>瑞士圣加仑国际经济论坛: </strong> 学术评审 (St. Gallen Symposium, 2023-2024)<br>
-            <!-- - <strong>联合国欧洲经济委员会: 可持续能源(氢能) </strong> 工作组会议成员 (UNECE, 2024)<br> -->
-            <!-- - <strong>联合国欧洲经济委员会: 电动交通</strong> 工作组会议成员 (UNECE, 2024)<br> -->
-            <hr>
+
           <li><strong>审稿人 (<span class="no_of_reviews"></span>+篇): </strong><br>
             - <strong>能源转换与管理杂志</strong> (Energy Conversion & Management, 影响因子: 11.2, 2021) <br>
             - <strong>应用能源杂志</strong> (Applied Energy, 影响因子: 11.4, 2022)<br>
@@ -818,31 +695,6 @@
       </div>
 
 
-      <hr class="display-mobile" style="width:113%">
-      <hr class="hidden-mobile">
-
-      <div class="doc-section" id="industrial-experience">
-
-        <h3 style="display:inline-block">产业经验</h3>
-
-        <ul class="square">
-
-          <!-- <li>2021-至今 | <strong>研发工程师, 燃料电池系统策略 </strong>
-            <div style="float: right"></div><br>
-            <strong><a href="https://www.freudenberg.com/" target="_blank">德国 · 科德宝集团</a></strong> (动力系统)<br> -->
-
-          <li>2017-2019 | <strong>合作者/合著, 动力燃料电池研发 </strong>
-            <div style="float: right"></div><br>
-            <strong><a href="https://www.toyota-europe.com/" target="_blank">比利时 · 丰田汽车</a></strong> (欧洲)
-
-          <li>2015-2016 | <strong>实习生, 汽车芯片失效分析</strong>
-            <div style="float: right"></div><br>
-            <strong><a href="http://infineon.com" target="_blank">德国 · 英飞凌科技</a></strong> (半导体)<br>
-            <!--[<a href="https://unknown/files/Master_Thesis_LMU_TUM-Xu_Hong.pdf" target="_blank">Thesis</a>]-->
-
-        </ul>
-      </div>
-
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
@@ -850,6 +702,10 @@
       <div class="doc-section" id="exhibitions">
         <h3>工业展</h3>
         <ul class="square">
+
+          <li>
+            2025 | <strong>大阪关西世博会</strong> (EXPO Osaka 2025), 大阪梦州, 日本<br>
+          </li>
 
           <li>
             2024 | <strong>欧洲智慧能源展 </strong>(The Smarter E Europe), 慕尼黑, 德国<br>
