--- a/de-resume.html
+++ b/de-resume.html
@@ -518,7 +518,7 @@ der Umfang der Dunkelheit
 
       <p align="justify" class="hidden-mobile">
 
-        Im Zusammenspiel von Innovation–Integration–Intelligenz widmet sich Dr. Xu der Weiterentwicklung kritischer Materialien für elektrische Energiesysteme und Anwendungen intelligenter Stromnetze.
+        Nach dem Prinzip "<strong>Pioniergeist–Innovation–Effizienz</strong>" widmet sich Dr. Hong Xu der Steigerung der <strong>Effizienz</strong> und der Förderung der <strong>intelligenten Vernetzung</strong> im Bereich <strong>Energie und Verkehr</strong>, mit dem Ziel, eine grüne Transformation der Industrie voranzutreiben und die Vision der <strong>Kohlenstoffneutralität</strong> zu verwirklichen.
 
       </p>
 
