--- a/en-resume.html
+++ b/en-resume.html
@@ -505,7 +505,7 @@
 
       <p align="justify" class="hidden-mobile">
 
-        At the interplay of Innovation–Integration-Intelligence, Dr. Xu is dedicated to advance critical materials for e-power systems and smart grid applications.
+        Adhering to the philosophy of "<strong>Pioneering–Innovation–Effectiveness</strong>", Dr. Hong Xu is dedicated to enhancing <strong>efficiency</strong> and fostering <strong>intelligent connectivity</strong> in the fields of <strong>energy and transportation</strong>, with the aim of promoting green industrial transformation and achieving the vision of <strong>carbon neutrality</strong>.
 
       </p>
 
