--- a/es-resume.html
+++ b/es-resume.html
@@ -520,7 +520,7 @@ conocimiento se expande
 
 
       <p align="justify" class="hidden-mobile">
-        En la intersección de Innovación–Integración–Inteligencia, el Dr. Xu se dedica al desarrollo de materiales críticos para sistemas de energía eléctrica y aplicaciones de redes eléctricas inteligentes.
+        Siguiendo la filosofía "<strong>Pionero–Innovación–Eficacia</strong>", el Dr. Hong Xu se dedica a mejorar la <strong>eficiencia</strong> y a promover la <strong>conectividad inteligente</strong> en los campos de <strong>energía y transporte</strong>, con el objetivo de impulsar la transformación industrial verde y alcanzar la visión de <strong>neutralidad de carbono</strong>.
       </p>
 
 
