--- a/fr-resume.html
+++ b/fr-resume.html
@@ -527,7 +527,7 @@ périmètre de l’obscurité
       </p>
 
       <p align="justify" class="hidden-mobile">
-        À l’intersection de l’Innovation–Intégration–Intelligence, le Dr Xu se consacre au développement de matériaux critiques pour les systèmes de production électrique et les applications des réseaux électriques intelligents.
+        Fidèle à la philosophie "<strong>Pionnier–Innovation–Efficacité</strong>", le Dr Hong Xu s'engage à améliorer l'<strong>efficacité</strong> et à promouvoir la <strong>connectivité intelligente</strong> dans les domaines de <strong>l'énergie et des transports</strong>, dans le but de favoriser la transformation écologique de l'industrie et de réaliser la vision de la <strong>neutralité carbone</strong>.
 
       </p>
 
