--- a/it-resume.html
+++ b/it-resume.html
@@ -523,7 +523,7 @@ Circonferenza dell'Oscurità
 
       <p align="justify" class="hidden-mobile">
 
-        All’intersezione tra Innovazione–Integrazione–Intelligenza, il Dott. Xu si dedica allo sviluppo di materiali critici per i sistemi elettrici e le applicazioni delle reti elettriche intelligenti.
+        Seguendo la filosofia "<strong>Pionierismo–Innovazione–Efficacia</strong>", il Dr. Hong Xu si dedica a migliorare l'<strong>efficienza</strong> e a promuovere la <strong>connessione intelligente</strong> nei settori di <strong>energia e trasporti</strong>, con l'obiettivo di guidare la trasformazione industriale verde e raggiungere la visione della <strong>neutralità carbonica</strong>.
 
 
       </p>
