--- a/jp-resume.html
+++ b/jp-resume.html
@@ -534,7 +534,7 @@
       </p>
       <div>
         <p class="hidden-mobile" align="justify">
-          現在、徐泓博士はドイツの産業界で<strong>新エネルギー動力システム</strong>の専門エンジニアとして従事しており、<strong>エネルギーと交通</strong>分野の<strong>カーボンニュートラル</strong>の実現に取り組んでいます。</br>
+          「<strong>先駆–革新–創効</strong>」の理念に基づき、徐泓博士は<strong>エネルギーと交通</strong>分野における<strong>効率向上</strong>と<strong>インテリジェント接続</strong>に尽力し、産業のグリーントランスフォーメーションを推進し、<strong>カーボンニュートラル</strong>の実現を目指している。
         </p>
       </div>
 
