--- a/ru-resume.html
+++ b/ru-resume.html
@@ -495,9 +495,8 @@
 
       <div>
         <p class="hidden-mobile" align="justify">
-          В настоящее время доктор Хонг Сюй работает в немецкой промышленности как инженер-эксперт в области
-          <strong>новых энергетических систем</strong>, стремясь к достижению <strong>углеродной нейтрализации</strong>
-          в области <strong>энергетики и транспорта</strong>.
+          Следуя философии "<strong>Первопроходец–Инновации–Эффективность</strong>", доктор Хун Сюй посвящает себя повышению <strong>эффективности</strong> и развитию <strong>умной взаимосвязи</strong> в области <strong>энергетики и транспорта</strong>, стремясь содействовать зеленой трансформации промышленности и достижению цели <strong>углеродной нейтральности</strong>.
+
         </p>
       </div>
 
