--- a/kr-resume.html
+++ b/kr-resume.html
@@ -550,8 +550,8 @@
       </p>
       <div>
         <p class="hidden-mobile" align="justify">
-          현재 쉬홍 박사는 독일 산업계에서 <strong>신에너지 동력 시스템</strong> 전문 엔지니어로 일하며, <strong>에너지와 교통</strong> 분야의
-          <strong>탄소중립</strong> 실현에 전념하고 있습니다.</br>
+          "<strong>선구–혁신–창효</strong>"의 이념을 바탕으로, 쉬홍 박사는 <strong>에너지와 교통</strong> 분야에서 <strong>효율 향상</strong>과 <strong>지능형 연결</strong>에 매진하며, 산업의 친환경 전환을 촉진하고 <strong>탄소 중립</strong>이라는 비전을 실현하고자 한다.
+
         </p>
       </div>
 
