--- a/de-resume.html
+++ b/de-resume.html
@@ -624,7 +624,7 @@ der Umfang der Dunkelheit
       </div>
 
 
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="industrial-experience">
@@ -633,7 +633,6 @@ der Umfang der Dunkelheit
 
         <ul class="square">
 
-          <!-- <li>2021-至今 | (动力系统)<br> -->
           <li>2017-2019 | <strong>Mitverfasser/Mitarbeiter, Automobile Brennstoffzellenmaterialien
             </strong>
             <div style="float: right"></div><br> <strong><a href="https://www.toyota-europe.com/" target="_blank">Toyota
@@ -641,13 +640,12 @@ der Umfang der Dunkelheit
           <li>2015-2016 | <strong>Praktikum, Chip-Fehleranalyse</strong>
             <div style="float: right"></div><br>
             <strong><a href="http://infineon.com" target="_blank">Infineon Technologies</a></strong>, Deutschland<br>
-            <!--[<a href="https://unknown/files/Master_Thesis_LMU_TUM-Xu_Hong.pdf" target="_blank">Abschlussarbeit</a>]-->
 
         </ul>
-      </div>
+      </div> -->
 
 
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
 
@@ -657,23 +655,23 @@ der Umfang der Dunkelheit
           <li>
             2024 | <strong>The Smarter E Europe</strong>, München, Deutschland<br>
           </li>
-          <!-- <li>
+          <li>
         2024 | <strong>World Hydrogen Summit & Exhibition</strong>, Rotterdam, Niederlande<br>
         </li>
         <li>
         2024 | <strong>Hannover Messe: Empowering Sustainable Industry</strong>, Hannover, Deutschland<br>
-        </li> -->
+        </li>
           <li>
             2024 | <strong>Handwerk & Design München</strong>, München, Deutschland<br>
           </li>
-          <!-- <li>
+          <li>
         2023 | <strong>H2 & FC EXPO</strong>, Stuttgart, Deutschland<br>
-        </li> -->
+        </li>
           <li>
             2023 | <strong>IAA Mobility</strong>, München, Deutschland<br>
           </li>
         </ul>
-      </div>
+      </div> -->
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
