--- a/jp-activities.html
+++ b/jp-activities.html
@@ -960,6 +960,8 @@
         <h3>参觀訪問</h3>
         <ul class="square">
           <li><strong>国際組織: </strong><br>
+            2025 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>国連大学本部 </strong> (東京渋谷,
+            日本)<br>
             2024 | <img class="flag-icon" src="./images/wflags/un.png" alt="UN"> <strong>国際連合ヨーロッパ本部 </strong> (ジュネーブ,
             スイス)<br>
             2024 | <img class="flag-icon" src="./images/wflags/de.png" alt="UN"> <strong>国際再生可能エネルギー機関</strong> (ボン,
