--- a/jp-research.html
+++ b/jp-research.html
@@ -904,7 +904,7 @@
           </li>
         </ol>
       </div> -->
-
+<!-- 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
@@ -927,7 +927,7 @@
               href="https://arxiv.org/abs/2408.01472" target="_blank">PDF</a>]
           </li>
         </ol>
-      </div>
+      </div> -->
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
@@ -946,7 +946,7 @@
       </div>
 
 
-      <hr class="display-mobile" style="width:113%">
+      <!-- <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="cooperation">
@@ -955,7 +955,7 @@
         <img class="hidden-mobile" src="images/Cooperation.png" style="width:100%" alt="">
         <img class="display-mobile" src="images/Cooperation_mobi.png" style="width:100%" alt="">
 
-      </div>
+      </div> -->
 
 
       <hr class="display-mobile" style="width:113%">
