--- a/jp-resume.html
+++ b/jp-resume.html
@@ -611,14 +611,7 @@
       <div class="doc-section" id="academic-services">
         <h3>学術職能</h3>
         <ul class="square">
-          <li><strong>国際組織/シンクタンク: </strong><br>
-            <!-- - <strong>ザルツブルク・グローバル・セミナー: KFAS-Salzburg</strong>, フェロー/研究員 (KFAS-SGS, 2024-2025)<br> -->
-            - <strong>国連ボン気候変動会議: 分会司会者</strong>, 青年代表/スピーカー (UNFCCC, 2023-2024)<br>
-            - <strong>国連欧州経済委員会: 気候変動と陸上交通</strong> 専門家グループメンバー (UNECE, 2023-2024)<br>
-            - <strong>スイス・サンクトガレン国際経済フォーラム: </strong> 学術審査員 (St. Gallen Symposium, 2023-2024)<br>
-            <!-- - <strong>国連欧州経済委員会: 持続可能なエネルギー(水素エネルギー) </strong> 作業部会メンバー (UNECE, 2024)<br>
-            - <strong>国連欧州経済委員会: 電動交通</strong> 作業部会メンバー (UNECE, 2024)<br> -->
-            <hr>
+
           <li><strong>査読者 (<span class="no_of_reviews"></span>+回): </strong><br>
             - <strong>エネルギー変換と管理</strong> (Energy Conversion & Management, インパクトファクター: 11.2, 2021) <br>
             - <strong>応用エネルギー</strong> (Applied Energy, IF: 11.4, 2022)<br>
@@ -649,30 +642,7 @@
         </ul>
       </div>
 
-      <hr class="display-mobile" style="width:113%">
-      <hr class="hidden-mobile">
 
-      <div class="doc-section" id="industrial-experience">
-
-        <h3 style="display:inline-block">産業経験</h3>
-
-        <ul class="square">
-
-          <!-- <li>2021-現在 | <strong>研究開発エンジニア, 燃料電池システム戦略 </strong>
-      <div style="float: right"></div><br>
-      <strong><a href="https://www.freudenberg-eps.com/" target="_blank">ドイツ · フロイデンベルググループ</a></strong> (動力システム)<br> -->
-
-          <li>2017-2019 | <strong>協力者/共著, 動力燃料電池の研究開発 </strong>
-            <div style="float: right"></div><br>
-            <strong><a href="https://www.toyota-europe.com/" target="_blank">日 · トヨタ自動車</a></strong> (ヨーロッパ)
-
-          <li>2015-2016 | <strong>インターン, 自動車用チップの故障解析</strong>
-            <div style="float: right"></div><br>
-            <strong><a href="http://infineon.com" target="_blank">独· インフィニオンテクノロジーズ</a></strong> (半導体)<br>
-            <!--[<a href="https://unknown/files/Master_Thesis_LMU_TUM-Xu_Hong.pdf" target="_blank">Thesis</a>]-->
-
-        </ul>
-      </div>
 
       <hr class="display-mobile" style="width:113%">
       <hr class="hidden-mobile">
@@ -680,7 +650,9 @@
       <div class="doc-section" id="exhibitions">
         <h3>工業展</h3>
         <ul class="square">
-
+          <li>
+            2025 | <strong>大阪・関西万博</strong> (Expo 2025 Osaka), 大阪, 日本<br>
+          </li>
           <li>
             2024 | <strong>ヨーロッパスマートエネルギー展</strong> (The Smarter E Europe), ミュンヘン, ドイツ<br>
           </li>
