--- a/kr-resume.html
+++ b/kr-resume.html
@@ -377,30 +377,30 @@
           <img src="images/banner_cns5.gif" style="width: 100%; margin-bottom: 5px;" alt="banner Image" />
           <div class="orange-dot-eth" alt="Munich" style="top: 12.3%; left: 52.2%; z-index: 9999;"></div>
           <div style="position: absolute; top: 20%; left: 3.5%; 
-          font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
+          font-family:'Times New Roman', 'Noto Serif KR','Songti SC', 'STSong', SimSun, serif;
           font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
-     지식의 원이<br>
-     확장될 때
+              지식의 원이<br>
+              확장될 때
      
           </div>
   
           <div style="position: absolute; bottom: 22%; left: 3.5%; 
-                  font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
+                  font-family:'Times New Roman', 'Noto Serif KR','Songti SC', 'STSong', SimSun, serif;
                   font-size: 24px; line-height: 1.2; font-weight: bold; color: white;">
-원의 둘레의 어둠도<br>
-함께 늘어난다
+          원의 둘레의 어둠도<br>
+          함께 늘어난다
 
           </div>
   
           <div style="position: absolute; bottom: 7%; left: 3.5%; 
-                  font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
+                  font-family:'Times New Roman', 'Noto Serif KR','Songti SC', 'STSong', SimSun, serif;
                   font-size: 14px; font-weight: bold; color: white;">
         —— 알베르트 아인슈타인 (ETH 졸업생)
 
           </div>
   
           <div style="position: absolute; bottom: 7%; right: 3.5%; 
-                  font-family:'Times New Roman', 'Noto Serif SC','Songti SC', 'STSong', SimSun, serif;
+                  font-family:'Times New Roman', 'Noto Serif KR','Songti SC', 'STSong', SimSun, serif;
                   font-size: 14px; font-weight: bold; color: rgb(198, 198, 198);">
           </div>
   
@@ -542,16 +542,14 @@
               <option value="ru-resume.html">🇷🇺 Русский</option>
               <option value="ar-resume.html">🇸🇦 اللغة العربية</option>
 
-
-
             </select>
           </span>
         </span>
       </p>
       <div>
         <p class="hidden-mobile" align="justify">
-          "<strong>선구–혁신–창효</strong>"의 이념을 바탕으로, 쉬홍 박사는 <strong>에너지와 교통</strong> 분야에서 <strong>효율 향상</strong>과 <strong>지능형 연결</strong>에 매진하며, 산업의 친환경 전환을 촉진하고 <strong>탄소 중립</strong>이라는 비전을 실현하고자 한다.
-
+          현재 쉬홍 박사는 독일 산업계에서 <strong>신에너지 동력 시스템</strong> 전문 엔지니어로 일하며, <strong>에너지와 교통</strong> 분야의
+          <strong>탄소중립</strong> 실현에 전념하고 있습니다.</br>
         </p>
       </div>
 
@@ -582,7 +580,7 @@
             장학금)<br>
           <li>2019-2021 | <strong>MBA, 경영관리/지속가능발전</strong>
             <div style="float: right"></div><br>
-            <strong><a href="https://quantic.edu/mba" target="_blank">미국 · 퀀틱 경영대학원</a></strong> (전액 장학금/Fellow)<br></p>
+            <strong><a href="https://quantic.edu/mba" target="_blank">미국 · 퀀틱 경영대학원</a></strong> (전액 장학금/Fellow)<br>
           <li>2018-2019 | <strong>교환학생, 은행금융학과</strong>
             <div style="float: right"></div><br>
             <strong><a href="https://uzh.ch" target="_blank">스위스 · 취리히 대학교</a></strong> (Swiss Mobility)<br>
@@ -639,37 +637,6 @@
         </div>
       </div>
 
-
-      <hr class="display-mobile" style="width:113%">
-      <hr class="hidden-mobile">
-
-      <div class="doc-section" id="academic-experience">
-
-        <h3 style="display:inline-block">연구 경험</h3>
-
-        <ul class="square">
-
-          <li>2023-2023 | <strong>방문 학자, 에너지 경제 및 정책</strong>
-            <div style="float: right"></div><br>
-            <strong><a href="https://oxfordenergy.org" target="_blank">영국 · 옥스퍼드 에너지 연구소</a></strong> (싱크탱크/Fellow)<br>
-          </li>
-
-          <li>2016-2021 | <strong>박사 연구원, 수소 에너지 & 연료전지</strong>
-            <div style="float: right"></div><br>
-            <strong><a href="https://psi.ch/en" target="_blank">스위스 · 폴 셰러 연구소</a></strong> (ETH 연합)
-
-          <li>2015-2016 | <strong>연구 조교, 반도체 & 센서</strong>
-            <div style="float: right"></div><br>
-            <strong><a href="http://tum.de" target="_blank">독일 · 뮌헨 공과대학교</a></strong> (물리학과)<br>
-          <li>2015-2015 | <strong>인턴, 수질 환경 및 오염 모델링</strong>
-            <div style="float: right"></div><br>
-            <strong><a href="http://enpc.fr" target="_blank">프랑스 · 국립 토목학교</a></strong> (파리테크)<br>
-          <li>2015-2015 | <strong>인턴, 재료 이미징 및 동역학</strong>
-            <div style="float: right"></div><br>
-            <strong><a href="http://xfel.eu" target="_blank">EU · X선 자유전자 레이저</a></strong> (독일 함부르크)<br>
-
-        </ul>
-      </div>
 
 
       <hr class="display-mobile" style="width:113%">
